--- a/vignettes/sitingclass.Rmd
+++ b/vignettes/sitingclass.Rmd
@@ -20,9 +20,9 @@ The `sitingclass` package computes the exposure of a weather station. Currently,
 
 ## Startup
 ### Installation
-The package `sitingclass` is available on Met's Gitlab and can be installed using `remotes::install_git()`. Downloading the package requires an id and token that I deliver on-demand. See [Authentication] on how to make your id and token accessible to your R environment.
+The package `sitingclass` is available on Met's Gitlab and can be installed using `remotes::install_git()`. Send an access request to [pierre.marie.lefeuvre@met.no](mailto:pierre.marie.lefeuvre@met.no) to get `YOUR_GIT_ID` and `YOUR_GIT_TOKEN`. See [Authentication](#Authentication) on how to make your id and token accessible to your R environment.
 
-```{r, eval=FALSE, echo = FALSE}
+```{r, eval=FALSE}
 remotes::install_git("https://YOUR_GIT_ID:YOUR_GIT_TOKEN@gitlab.met.no/pierreml/sitingclass.git",force=T)
 .rs.restartR()
 library(sitingclass)
