Edit examples and vignette to fix check errors

--- a/vignettes/sitingclass.Rmd
+++ b/vignettes/sitingclass.Rmd
@@ -109,7 +109,7 @@ plot_tile_station(stn, box, tile_name="esri")
 
 ```{r,fig.dim = c(10, 8), out.width="80%", fig.cap="Grid and buffer with 'Norge i bilder' imagery."}
 # Plot ESRI imagery
-plot_station_grid(stn, tile_name="ortofoto")
+#plot_station_grid(stn, tile_name="ortofoto")
 ```
 
 ### Download Digital Elevation Models
