--- a/vignettes/sitingclass.Rmd
+++ b/vignettes/sitingclass.Rmd
@@ -24,10 +24,14 @@ The package `sitingclass` is available on Met's Gitlab and can be installed usin
 
 ```{r, eval=FALSE}
 # manually adding your token
-remotes::install_git("https://YOUR_GIT_ID:YOUR_GIT_TOKEN@gitlab.met.no/pierreml/sitingclass.git",force=T)
+remotes::install_git("https://YOUR_GIT_ID:YOUR_GIT_TOKEN@gitlab.met.no/pierreml/sitingclass.git",
+                     force = TRUE)
 
 # If you have set your token in .Renviron, use:
-remotes::install_git(paste0("https://",Sys.getenv("GIT_ID"),":",Sys.getenv("GIT_TOKEN"),"@gitlab.met.no/pierreml/sitingclass.git"),force=T)
+remotes::install_git(paste0("https://", Sys.getenv("GIT_ID"), ":",
+                            Sys.getenv("GIT_TOKEN"),
+                            "@gitlab.met.no/pierreml/sitingclass.git"),
+                     force = TRUE)
 
 .rs.restartR()
 library(sitingclass)
@@ -98,26 +102,38 @@ centre
 
 # Construct box to extract WMS tile
 dx <- 100
-box <- make_bbox(centre,dx)
+box <- make_bbox(centre, dx)
 ```
 
 ```{r,fig.dim = c(10, 8), out.width="80%", fig.cap="A satellite image with the station location as a red dot."}
 # Plot ESRI imagery tile
-plot_tile_station(stn, box, tile_name="esri")
+plot_tile_station(stn, box, tile_name = "esri")
 ```
 
 ```{r,fig.dim = c(10, 8), out.width="80%", fig.cap="Grid and buffer with 'Norge i bilder' imagery."}
 # Plot tile with grid and proximity circles
-#plot_station_grid(stn, tile_name="ortofoto")
+#plot_station_grid(stn, tile_name = "ortofoto")
 ```
 
 ### Download Digital Elevation Models
 ```{r,fig.dim = c(10, 8), out.width="80%", fig.cap="Hillshade of the digital surface model.", results = 'hide'}
-# Load Karverket's DEMs
-f.ow  <- FALSE #TRUE to overwrite files
-dem   <- download_dem_kartverket(stn,name="dtm",dx  ,resx=1 ,f.overwrite=f.ow)
-dsm   <- download_dem_kartverket(stn,name="dom",dx  ,resx=1 ,f.overwrite=f.ow)
-demkm <- download_dem_kartverket(stn,name="dtm",20e3,resx=20,f.overwrite=f.ow)
+# Load Karverket's DEMs -f_ow = TRUE to overwrite files
+f_ow  <- FALSE 
+dem   <- download_dem_kartverket(stn,
+                                 name = "dtm",
+                                 dx,
+                                 resx = 1,
+                                 f_overwrite = f_ow)
+dsm   <- download_dem_kartverket(stn,
+                                 name = "dom",
+                                 dx,
+                                 resx = 1,
+                                 f_overwrite=f_ow)
+demkm <- download_dem_kartverket(stn,
+                                 name = "dtm",
+                                 20e3,
+                                 resx = 20,
+                                 f_overwrite = f_ow)
 
 # Plot 100-m Digital Surface Model and 20-km Digital Terrain Model
 library(rayshader)
@@ -147,7 +163,10 @@ The function `plot_station_siting_context()` will compute all the code chunks fr
 Sys.setenv(TZ="UTC") # "Europe/Oslo"
 
 # The main function plotting sun diagram and context for a weather station 
-plot_station_siting_context(stationid=18700, paramid=211, f.verbose=F, f.pdf=F)
+plot_station_siting_context(stationid = 18700,
+                            paramid = 211,
+                            f_verbose = FALSE,
+                            f_pdf=FALSE)
 
 ```
 
