Remove purrr map_dfr() in get_metadata and other fixes

--- a/vignettes/sitingclass.Rmd
+++ b/vignettes/sitingclass.Rmd
@@ -57,7 +57,6 @@ The function `get_metadata_frost()` will fetch `FROST_ID` and `FROST_KEY` then s
   + [maptiles](https://github.com/riatelab/maptiles): to get tiles from available map provides
   + [ows4R](https://github.com/eblondel/ows4R): to download DEMs using **WCS getCoverage** (Web Coverage Service)
 * Geospatial processing:
-  + [sf](https://github.com/rspatial/sf): vector processing and conversion
   + [terra](https://github.com/rspatial/terra): SpatRaster and SpatVector processing and conversion
 * Computing horizon and sun position:
   + [rgrass](https://rsbivand.github.io/rgrass/): to compute horizon from GRASS
@@ -91,18 +90,20 @@ library(sitingclass)
 stationid <- 18700
 
 # Get station metadata
-stn <- get_latlon_frost(stationid)
+stn <- get_metadata_frost(stationid)
 stn
 ```
 ### Construct the coordinate box
 ```{r}
 # Get coordinates
-centre <- sf::st_coordinates(stn)
+centre <- terra::crds(stn)
 centre
 
 # Construct box to extract WMS tile
 dx <- 100
 box <- make_bbox(centre, dx)
+# or
+box <- make_bbox(stn, dx)
 ```
 
 ```{r,fig.dim = c(10, 8), out.width="80%", fig.cap="A satellite image with the station location as a red dot."}
